

7.5.0-alpha1
------------
Requirements:
- PHP 7.4 is now the minimally required version.

Features:
- ALL: The "About" block on our forms will show fewer sections when the account
  data has not yet been completed or is incorrect. This prevents duplicate
  messages saying "no contract data yet".
- MA: Added buttons to the invoice status screen to mail the Acumulus invoice or
  packing slip.

Bugs:
- MA2.4: Finally tested with Magento 2.4 and PHP 8.1. Below the findings:
- MA: <details> sections could not be opened and remained closed.
- MA: config form: Error: Payment model name is not provided in config!
- MA: Automatically sending invoice data to Acumulus on Magento invoice
  creation (instead of order status change) did not work.
- MA: TypeError: Siel\Acumulus\Helpers\Number::isZero(): Argument #1 ($f1) must
  be of type float, null given.
- MA: Our severity "exception" had no mapping to a Magento severity.
- MA: ResourceCollection instance for Acumulus entries was reused instead of
  recreated, leading to same results being returned for each subsequent query.
- MA: ResourceCollection instances for orders or credit notes were reused
  instead of recreated, leading to same results being returned for each
  subsequent query.
- ALL: Edge case: If an order has no order lines, an invoice without invoice
  lines would be sent, which is not permitted by the Acumulus API.
- ALL: PHP Warning: Undefined array key "meta-vatrate-range-matches" in
  .../Invoice/Completor.php on line 1291.
- OC: Styling improvement on our forms (markup element).
- JOO: The 'cancel' button gave a fatal, will now redirect to the dashboard.
- ALL: PHP 8.1: Deprecated: DOMDocument::createTextNode(): Passing null to
  parameter #1 ($data) of type string is deprecated in .../Util.php on line 104.

Refactorings:
- ALL: Introduced a 'collection' form element that is treated as a simple
  element, thus 1 label and description and the collection of subfields is